@@ -1,4 +1,5 @@
 ======================
+    ADDED: alt-O now sync the panels (like ctrl-left/right arrows)
     ADDED: new shortcut (ctrl-d) to open bookmarks on current panel
 	 ADDED: panel costum colors: new Current Marked Foreground
     ADDED: compare by content: the action is now smarter in finding the right files
